# oxidauth

./: .gitignore  Cargo.toml  Cross.toml  dev.Dockerfile  docker-compose.yml  example.env  rustfmt.toml
oxidauth-cli/: Cargo.toml
oxidauth-http/: Cargo.toml  Dockerfile
oxidauth-http/hurl/: public_keys_create.hurl  setup_user.hurl  variables-local
oxidauth-http/hurl/tests/: authenticate.hurl  authorities.hurl  can.hurl  exchange.hurl  permissions.hurl  public_keys.hurl  register.hurl  role_permissions.hurl  role_roles.hurl  roles.hurl  settings.hurl  user_authorities.hurl  user_permissions.hurl  users.hurl
oxidauth-http/src/: lib.rs  main.rs  prelude.rs  response.rs
oxidauth-http/src/middleware/: mod.rs  permission_extractor.rs
oxidauth-http/src/provider/: mod.rs
oxidauth-http/src/server/: mod.rs  shutdown_signal.rs
oxidauth-import-export/: Cargo.toml
oxidauth-kernel/: Cargo.toml
oxidauth-kernel/src/: dev_prelude.rs  error.rs  lib.rs  service.rs
oxidauth-kernel/src/auth/: authenticate.rs  authenticate_or_register.rs  mod.rs  register.rs
oxidauth-kernel/src/auth_keys/: create_auth_key.rs  mod.rs
oxidauth-kernel/src/authorities/: authenticate.rs  create_authority.rs  delete_authority.rs  find_authority_by_client_id.rs  find_authority_by_client_key.rs  find_authority_by_id.rs  find_authority_by_strategy.rs  list_all_authorities.rs  mod.rs  register.rs  update_authority.rs
oxidauth-kernel/src/bootstrap/: mod.rs
oxidauth-kernel/src/invitations/: accept_invitation.rs  create_invitation.rs  delete_invitation.rs  find_invitation.rs  mod.rs
oxidauth-kernel/src/jwt/: mod.rs
oxidauth-kernel/src/mailer/: message.rs  mod.rs  service.rs
oxidauth-kernel/src/permissions/: create_permission.rs  delete_permission.rs  find_permission_by_parts.rs  list_all_permissions.rs  mod.rs
oxidauth-kernel/src/private_keys/: find_most_recent_private_key.rs  find_most_recent_public_key.rs  mod.rs
oxidauth-kernel/src/provider/: mod.rs
oxidauth-kernel/src/public_keys/: create_public_key.rs  delete_public_key.rs  find_public_key_by_id.rs  list_all_public_keys.rs  mod.rs
oxidauth-kernel/src/refresh_tokens/: create_refresh_token.rs  delete_refresh_token.rs  delete_refresh_token_by_id.rs  delete_refresh_token_by_user_id.rs  exchange_refresh_token.rs  find_refresh_token_by_id.rs  mod.rs
oxidauth-kernel/src/role_permission_grants/: create_role_permission_grant.rs  delete_role_permission_grant.rs  list_role_permission_grants_by_role_id.rs  mod.rs
oxidauth-kernel/src/role_role_grants/: create_role_role_grant.rs  delete_role_role_grant.rs  list_role_role_grants_by_parent_id.rs  mod.rs
oxidauth-kernel/src/roles/: create_role.rs  delete_role.rs  find_role_by_id.rs  find_role_by_name.rs  list_all_roles.rs  mod.rs  update_role.rs
oxidauth-kernel/src/rsa/: mod.rs
oxidauth-kernel/src/settings/: fetch_setting.rs  mod.rs  save_setting.rs
oxidauth-kernel/src/totp/: generate.rs  mod.rs  validate.rs
oxidauth-kernel/src/totp_secrets/: create_totp_secret.rs  create_totp_secrets_by_authority_id.rs  find_totp_secret_by_user_id.rs  mod.rs  select_totp_secret_by_user_id.rs
oxidauth-kernel/src/user_authorities/: create_user_authority.rs  delete_user_authority.rs  find_user_authority_by_user_id_and_authority_id.rs  list_user_authorities_by_user_id.rs  mod.rs  update_user_authority.rs  user_authority_create.rs
oxidauth-kernel/src/user_authority/: find_user_authority_by_authority_and_user_identifier.rs  mod.rs
oxidauth-kernel/src/user_permission_grants/: create_user_permission_grant.rs  delete_user_permission_grant.rs  list_user_permission_grants_by_user_id.rs  mod.rs
oxidauth-kernel/src/user_role_grants/: create_user_role_grant.rs  delete_user_role_grant.rs  list_user_role_grants_by_user_id.rs  mod.rs
oxidauth-kernel/src/users/: create_user.rs  delete_user_by_id.rs  find_user_by_id.rs  find_user_by_username.rs  find_users_by_ids.rs  list_all_users.rs  mod.rs  update_user.rs  user_create.rs
oxidauth-permission/: Cargo.toml
oxidauth-permission/benches/: complex.rs  simple.rs  very_long.rs
oxidauth-permission/src/: lib.rs
oxidauth-permission/src/tokens/: compare.rs  mod.rs  parse.rs
oxidauth-postgres/: Cargo.toml
oxidauth-postgres/migrations/: 20221019185709_create_users.sql  20221019214702_create_roles.sql  20221019222410_create_permissions.sql  20221020012656_create_user_permission_grants.sql  20221020012706_create_role_permission_grants.sql  20221020180349_create_authorities.sql  20221020204155_create_user_authorities.sql  20221027183328_create_refresh_tokens.sql  20240124155451_create_settings.sql  20240416170202_create_auth_keys.sql  20240416170202_create_email_codes.sql  20240416170202_create_totp_secrets.sql  20240523190325_remove_unique_strategy_from_authorities.sql  20240619063635_modify_user_authority_user_identifier_unique.sql  20250610213132_add_nbf_offset_to_authority_settings.sql
oxidauth-postgres/src/: lib.rs  prelude.rs
oxidauth-postgres/src/auth_keys/: mod.rs
oxidauth-postgres/src/authorities/: mod.rs
oxidauth-postgres/src/invitations/: mod.rs
oxidauth-postgres/src/permissions/: mod.rs
oxidauth-postgres/src/private_keys/: mod.rs
oxidauth-postgres/src/public_keys/: mod.rs
oxidauth-postgres/src/rows/: mod.rs  (+7 more)
oxidauth-rs/: Cargo.toml
oxidauth-rs/src/: lib.rs  prelude.rs
oxidauth-seed/: Cargo.toml
oxidauth-server/: Cargo.toml  Dockerfile  build.sh  todo.md
oxidauth-server/hurl/: setup_user.hurl  variables-local
oxidauth-server/migrations/: 20221019185709_create_users.sql  20221020012659_create_user_role_grants.sql  20221020012706_create_role_permission_grants.sql  20221020012709_create_role_role_grants.sql  20221020180349_create_authorities.sql  20221020204155_create_user_authorities.sql  20221021180809_create_public_keys.sql  20230711212057_create_invitations.sql
oxidauth-server/src/: error.rs  jwt.rs  lib.rs  main.rs
oxidauth-services/: Cargo.toml
oxidauth-services/src/: lib.rs
oxidauth-telemetry/: Cargo.toml
oxidauth-telemetry/src/: lib.rs
oxidauth-usecases/: Cargo.toml
oxidauth-usecases/src/: dev_prelude.rs  lib.rs
(+861 files in other folders)
