[workspace]

members = [
    "oxidauth-cli",
    "oxidauth-http",
    "oxidauth-import-export",
    "oxidauth-kernel",
    "oxidauth-permission",
    "oxidauth-postgres",
    "oxidauth-repository",
    "oxidauth-rs",
    "oxidauth-seed",
    "oxidauth-server",
    "oxidauth-services",
    "oxidauth-telemetry",
]
