[workspace]

resolver = "2"

members = [
    "oxidauth-cli",
    "oxidauth-http",
    "oxidauth-import-export",
    "oxidauth-kernel",
    "oxidauth-permission",
    "oxidauth-postgres",
    "oxidauth-repository",
    "oxidauth-rs",
    "oxidauth-seed",
    "oxidauth-services",
    "oxidauth-telemetry",
]

exclude = [
    "oxidauth-server",
]
