[package]
name = "oxidauth-http"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "http lib and server for oxidauth"
homepage = "https://oxidauth.rs"
repository = "https://github.com/oxidauth/oxidauth"
readme = "README.md"

[dependencies]
oxidauth-kernel = { path = "../oxidauth-kernel" }
oxidauth-usecases = { path = "../oxidauth-usecases" }
oxidauth-postgres = { path = "../oxidauth-postgres" }

axum = "0.6.18"
axum-macros = "0.3.7"
chrono = { version = "0.4.26", features = ["serde"] }
rust_decimal = { version = "1.30.0", features = ["serde"] }
serde = { version = "1.0.165", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.29.1", features = ["full"] }
uuid = { version = "1.4.0", features = ["serde", "v4"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }

