[package]
name = "oxidauth-http"
version = "0.1.8"
edition = "2021"
license = "GPL-3.0"
description = "http lib and server for oxidauth"
homepage = "https://oxidauth.rs"
repository = "https://github.com/oxidauth/oxidauth"
readme = "README.md"

[dependencies]
oxidauth-kernel = { path = "../oxidauth-kernel" }
oxidauth-usecases = { path = "../oxidauth-usecases" }
oxidauth-postgres = { path = "../oxidauth-postgres" }
oxidauth-permission = { path = "../oxidauth-permission" }
oxidauth-telemetry = { path = "../oxidauth-telemetry" }

axum = { version = "0.7.5", features = ["http1", "json", "macros", "matched-path", "original-uri", "tower-log", "query"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-macros = "0.4.1"
chrono = { version = "0.4.38", features = ["serde"] }
rust_decimal = { version = "1.35.0", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
