[package]
name = "oxidauth-kernel"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "core lib for oxidauth"
homepage = "https://oxidauth.rs"
repository = "https://github.com/oxidauth/oxidauth"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
chrono = { version = "0.4.26", features = ["serde"] }
rust_decimal = { version = "1.30.0", features = ["serde"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
uuid = { version = "1.3.4", features = ["v4", "serde"] }
