[package]
name = "oxidauth-kernel"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "core lib for oxidauth"
homepage = "https://oxidauth.rs"
repository = "https://github.com/oxidauth/oxidauth"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.69"
base64 = "0.21.2"
chrono = { version = "0.4.26", features = ["serde"] }
jsonwebtoken = "8.3.0"
rand = "0.8.5"
rsa = { version = "0.9.2", features = ["serde"] }
rust_decimal = { version = "1.30.0", features = ["serde"] }
serde = { version = "1.0.165", features = ["derive"] }
serde_json = "1.0.99"
uuid = { version = "1.4.0", features = ["v4", "serde"] }
