[package]
name = "oxidauth-kernel"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0"
description = "core lib for oxidauth"
homepage = "https://oxidauth.rs"
repository = "https://github.com/oxidauth/oxidauth"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxidauth-permission = { path = "../oxidauth-permission" }

async-trait = "0.1.81"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
flate2 = "1.0.33"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["serde"] }
rust_decimal = { version = "1.36.0", features = ["serde"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["test-util"] }
tracing = "0.1.40"
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
