[package]
name = "oxidauth-permission"
version = "0.4.0"
edition = "2021"
license = "GPL-3.0"
description = "permission logic for oxidauth"
homepage = "https://oxidauth.rs"
repository = "https://github.com/oxidauth/oxidauth"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "simple"
harness = false

[[bench]]
name = "complex"
harness = false

[[bench]]
name = "very_long"
harness = false
