[package]
name = "oxidauth-postgres"
version = "0.4.0-rc2"
edition = "2021"
license = "GPL-3.0"
description = "postgres storage implementation for oxidauth"
homepage = "https://oxidauth.rs"
repository = "https://github.com/oxidauth/oxidauth"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxidauth-repository = { path = "../oxidauth-repository" }
oxidauth-kernel = { path = "../oxidauth-kernel" }

async-recursion = "1.1.1"
async-trait = "0.1.82"
chrono = { version = "0.4.38", features = ["serde"] }
serde = "1.0.209"
serde_json = "1.0.127"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-rustls", "chrono", "json", "time", "macros", "migrate", "postgres", "uuid"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
