[package]
name = "oxidauth-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "rust client for oxidauth"
homepage = "https://oxidauth.rs"
repository = "https://github.com/oxidauth/oxidauth"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxidauth-kernel = { path = "../oxidauth-kernel" }

chrono = { version = "0.4.32", features = ["serde"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
url = { version = "2.5.0", features = ["serde"] }
