[package]
name = "oxidauth"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "rust client for oxidauth"
homepage = "https://oxidauth.rs"
repository = "https://github.com/oxidauth/oxidauth"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "test_client"
path = "bin/test_client.rs"

[dependencies]
oxidauth-kernel = { path = "../oxidauth-kernel" }
oxidauth-http = { path = "../oxidauth-http" }
oxidauth-permission = { path = "../oxidauth-permission" }
oxidauth-usecases = { path = "../oxidauth-usecases" }

axum = "0.7.3"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
chrono = { version = "0.4.32", features = ["serde"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
url = { version = "2.5.0", features = ["serde"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
