[package]
name = "oxidauth"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0"
description = "rust client for oxidauth"
homepage = "https://oxidauth.rs"
repository = "https://github.com/oxidauth/oxidauth"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "test_client"
path = "bin/test_client.rs"

[dependencies]
oxidauth-kernel = { path = "../oxidauth-kernel" }
oxidauth-http = { path = "../oxidauth-http" }
oxidauth-permission = { path = "../oxidauth-permission" }
oxidauth-usecases = { path = "../oxidauth-usecases" }

axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
