[package]
name = "oxidauth-seed"
version = "0.4.0"
edition = "2021"
license = "GPL-3.0"
description = "crate for seeding an oxidauth env -- usually for testing or demo"
homepage = "https://oxidauth.rs"
repository = "https://github.com/oxidauth/oxidauth"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
