[package]
name = "oxidauth-server"
version = "0.0.0"
edition = "2021"

[dependencies]
argon2 = "0.4.1"
async-recursion = "1.0.4"
async-trait = "0.1.69"
axum = { version = "0.5.17", features = ["headers", "http1", "json", "macros", "matched-path", "original-uri", "tower-log", "query"] }
axum-macros = "0.2.3"
base64 = "0.13.1"
bcrypt = "0.13.0"
chrono = { version = "0.4.26", features = ["serde"] }
clap = "3.2.25"
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["std"] }
reqwest = "0.11.18"
rsa = { version = "0.7.2", features = ["serde"] }
serde = { version = "1.0.165", features = ["derive"] }
serde_json = "1.0.99"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "chrono", "json", "time", "macros", "migrate", "postgres", "uuid"] }
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.0", features = ["v4", "serde"] }
