[package]
name = "oxidauth-usecases"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxidauth-kernel = { path = "../oxidauth-kernel" }
oxidauth-repository = { path = "../oxidauth-repository" }

argon2 = "0.5.0"
async-trait = "0.1.69"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.165", features = ["derive"] }
serde_json = "1.0.99"
uuid = { version = "1.4.0", features = ["serde", "v4"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
base64 = "0.21.7"
chrono = "0.4.31"
