[package]
name = "oxidauth-usecases"
version = "0.4.0-rc1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxidauth-kernel = { path = "../oxidauth-kernel" }
oxidauth-repository = { path = "../oxidauth-repository" }

argon2 = "0.5.3"
async-trait = "0.1.80"
base64 = "0.22.1"
boringauth = "0.9.0"
chrono = "0.4.38"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
url = { version = "2.5.2", features = ["serde"] }
reqwest = { version = "0.12.5", default-features = false, features = [
    "json",
    "rustls-tls",
] }
